	PR rtl-optimization/56195 	* lra-constraints.c (get_reload_reg): Don't reuse regs 	if they have smaller mode than requested, if they have 	wider mode than requested, try to return a SUBREG.

* gcc.dg/torture/pr56195.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@195891 138bc75d-0d04-0410-961f-82ee72b054a4